--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "size": "size-limit",
     "analyze": "size-limit --why",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook -s public",
+    "build-storybook": "build-storybook",
     "serve-storybook": "serve storybook-static"
   },
   "peerDependencies": {
