--- a/example/package.json
+++ b/example/package.json
@@ -14,6 +14,7 @@
     "@vercel/node": "^2.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-embeds": "^0.0.1",
     "react-syntax-highlighter": "^15.5.0"
   },
   "devDependencies": {
